--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -6,3 +6,12 @@
     <%= link_to a.title, a%>
   </li>
 <%end%>
+</ul>
+
+<p>
+  <% if user_signed_in? %>
+    <%= link_to "Log Out", destroy_user_session_path, data: {turbo_method: :delete} %>
+  <% else %>
+    <%= link_to "Login", new_user_session_path %>
+  <% end %>
+</p>
