Updated question entry mechanism. Now works for a1

--- a/app/views/assignments/_a1.html.erb
+++ b/app/views/assignments/_a1.html.erb
@@ -1,1 +1,11 @@
-<h1>Wecome to assignment <%= assignment.title%></h1>
+<h1>Welcome to assignment <%= assignment.title%></h1>
+
+<%= form_with model: assignment do |a_form| %>
+ <%@cur_guess = assignment.return_guess(1,current_user.id)%>
+ <input type="hidden" name="q_ids[]", value=1>
+ <input type="text" name="q_guesses[]", value=<%=@cur_guess%>>
+ <%@cur_guess = assignment.return_guess(2,current_user.id)%>
+ <input type="hidden" name="q_ids[]", value=2>
+ <input type="text" name="q_guesses[]", value=<%=@cur_guess%>> 
+  <%= a_form.submit "Submit" %>
+<%end%>
