--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,17 +1,23 @@
-<h1>Yellowstone Activity Book</h1>
+<%=stylesheet_link_tag "top_level"%>
+<div class="home_page regular">  
+  <%= render "sidebar" %>
+  <div class="content">
+    <h1>Yellowstone Activity Book</h1>
 
-<ul>
-<% @assignments.each do |a| %>
-  <li>
-    <%= link_to a.title, a%>
-  </li>
-<%end%>
-</ul>
+    <ul>
+    <% @assignments.each do |a| %>
+      <li>
+        <%= link_to a.title, a%>
+      </li>
+    <%end%>
+    </ul>
 
-<p>
-  <% if user_signed_in? %>
-    <%= link_to "Log Out", destroy_user_session_path, data: {turbo_method: :delete} %>
-  <% else %>
-    <%= link_to "Login", new_user_session_path %>
-  <% end %>
-</p>
+    <p>
+      <% if user_signed_in? %>
+        <%= link_to "Log Out", destroy_user_session_path, data: {turbo_method: :delete} %>
+      <% else %>
+        <%= link_to "Login", new_user_session_path %>
+      <% end %>
+    </p>
+  </div>
+</div>
