--- a/app/assets/stylesheets/top_level.css
+++ b/app/assets/stylesheets/top_level.css
@@ -1,7 +1,11 @@
 body {
-  margin: 0px;
-  
+  margin: 0px;  
 }
+
+ul {
+  list-style-type: none;
+}
+
 div.regular {
   display: grid;
   grid-template-columns: 1fr 4fr;
@@ -10,10 +14,28 @@ div.regular {
 
 .sidebar {
   grid-column: 1 / 2;
-  background-color: darkgreen;
+  background-color: #154734;
   color: white;
   padding: 20px
 }
+
+.sidebar_list_item {
+  font-size: 20px;
+  margin: 10px;
+}
+
+.sidebar_list_item a {
+  color: white; 
+  text-decoration: none;
+}
+
+#assignment_listing {
+  list-style-type: circle;
+}
+.assignment_item a {
+  color: white;
+}
+
 
 .content {
   grid-column: 2/3;
