--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,23 +1,13 @@
 <%=stylesheet_link_tag "top_level"%>
+<%=stylesheet_link_tag "root_page"%>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poller+One&display=swap');
+</style>
 <div class="home_page regular">  
-  <%= render "sidebar" %>
-  <div class="content">
-    <h1>Yellowstone Activity Book</h1>
+  <%= render "sidebar" , assignments: Assignment.all %>
+  <div class="content" id="root_content">
+    <h1 id="root_title">Road Trip 2024</h1>
+    <h2 id = "root_subtitle">Yellowstone and Beyond</h2>
 
-    <ul>
-    <% @assignments.each do |a| %>
-      <li>
-        <%= link_to a.title, a%>
-      </li>
-    <%end%>
-    </ul>
-
-    <p>
-      <% if user_signed_in? %>
-        <%= link_to "Log Out", destroy_user_session_path, data: {turbo_method: :delete} %>
-      <% else %>
-        <%= link_to "Login", new_user_session_path %>
-      <% end %>
-    </p>
   </div>
 </div>
