--- a/app/assets/stylesheets/root_page.css
+++ b/app/assets/stylesheets/root_page.css
@@ -2,6 +2,7 @@
   background-image: url(yellowstone_background_image.jpg);
   width: auto;
   background-size: cover;
+  height: 100vh;
 }
 
 #root_title {
