--- a/app/views/assignments/_a1.html.erb
+++ b/app/views/assignments/_a1.html.erb
@@ -1,13 +1,77 @@
-<h1>Welcome to assignment <%= assignment.title%></h1>
 
-<%= form_with model: assignment do |a_form| %>
- <% q_id = Question.where(code: "RUSH1").first.id%>
- <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
- <input type="hidden" name="q_ids[]", value=q_id>
- <input type="text" name="q_guesses[]", value=<%=@cur_guess%>>
- <% q_id = Question.where(code: "RUSH2").first.id%>
- <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
- <input type="hidden" name="q_ids[]", value=q_id>
- <input type="text" name="q_guesses[]", value=<%=@cur_guess%>> 
-  <%= a_form.submit "Submit" %>
-<%end%>
+<div class="rushmore regular">
+  <%= render "sidebar" , assignments: Assignment.all %>
+  <div class="content">
+    <h1 id = "rushmore_title">Welcome to Mount Rushmore</h1>
+
+    <img id="rushmore_img" src="/assets/Mount_Rushmore.jpg">
+
+    
+    <%= form_with model: assignment do |a_form|%>
+      <p id="president_questions_label">Please give the last name of the 4 presidents, in order from left to right</p>
+      <div id="president_questions">
+        <div id="rushmore1">
+          <% q_id = Question.where(code: "RUSH1").first.id%>
+          <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
+          <input type="hidden" name="q_ids[]", value=<%=q_id%>%>
+          <input type="text" name="q_guesses[]", value=<%=@cur_guess%>>
+        </div>
+        <div id = "rushmore2">
+          <% q_id = Question.where(code: "RUSH2").first.id%>
+          <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
+          <input type="hidden" name="q_ids[]", value=<%=q_id%>>
+          <input type="text" name="q_guesses[]", value=<%=@cur_guess%>> 
+        </div>
+        <div id = "rushmore3">
+          <% q_id = Question.where(code: "RUSH3").first.id%>
+          <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
+          <input type="hidden" name="q_ids[]", value=<%=q_id%>>
+          <input type="text" name="q_guesses[]", value=<%=@cur_guess%>>
+        </div>
+        <div id="rushmore4">
+          <% q_id = Question.where(code: "RUSH4").first.id%>
+          <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
+          <input type="hidden" name="q_ids[]", value=<%=q_id%>>
+          <input type="text" name="q_guesses[]", value=<%=@cur_guess%>> 
+        </div>
+      </div>
+
+      <div class="rushmore_question">
+        <p class="question_label">How many years did it take to build Mt. Rushmore?</p>
+        <% q_id = Question.where(code: "RUSH5").first.id%>
+        <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
+        <input type="hidden" name="q_ids[]", value=<%=q_id%>>
+        <input class="rushmore_input" type="text" name="q_guesses[]", value=<%=@cur_guess%>> 
+      </div>
+      <div class="rushmore_question">
+        <p class="question_label">Who built Mount Rushmore?</p>
+        <% q_id = Question.where(code: "RUSH6").first.id%>
+        <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
+        <input type="hidden" name="q_ids[]", value=<%=q_id%>>
+        <input class="rushmore_input" type="text" name="q_guesses[]", value=<%=@cur_guess%>> 
+      </div>
+      <div class="rushmore_question">
+        <p class="question_label">Mt. Rushmore is in which set of hills?</p>
+        <% q_id = Question.where(code: "RUSH7").first.id%>
+        <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
+        <input type="hidden" name="q_ids[]", value=<%=q_id%>>
+        <input class="rushmore_input" type="text" name="q_guesses[]", value=<%=@cur_guess%>> 
+      </div>
+      <div class="rushmore_question">
+        <p class="question_label">Who has the longest nose on Mt. Rushmore?</p>
+        <% q_id = Question.where(code: "RUSH8").first.id%>
+        <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
+        <input type="hidden" name="q_ids[]", value=<%=q_id%>>
+        <input class="rushmore_input" type="text" name="q_guesses[]", value=<%=@cur_guess%>> 
+      </div>
+      <div class="rushmore_question">
+        <p class="question_label">In 1937, Congress introduced a bill that would have added which woman to Mt. Rushmore?</p>
+        <% q_id = Question.where(code: "RUSH9").first.id%>
+        <%@cur_guess = assignment.return_guess(q_id,current_user.id)%>
+        <input type="hidden" name="q_ids[]", value=<%=q_id%>>
+        <input class="rushmore_input" type="text" name="q_guesses[]", value=<%=@cur_guess%>> 
+      </div>
+      <%= a_form.submit "Submit" %>
+    <%end%>
+  </div>
+</div>
