--- a/app/views/assignments/_sidebar.html.erb
+++ b/app/views/assignments/_sidebar.html.erb
@@ -13,7 +13,7 @@
   <% if user_signed_in? %>
     <li class="sidebar_list_item"><%= link_to "Log Out", destroy_user_session_path, data: {turbo_method: :delete}%></li>
   <% else %>
-    <%= link_to "Login", new_user_session_path %>
+    <li class="sidebar_list_item"><%= link_to "Login", new_user_session_path %></li>
   <%end%>
  </ul>
 </div>
