--- a/app/assets/stylesheets/rushmore.css
+++ b/app/assets/stylesheets/rushmore.css
@@ -7,6 +7,7 @@
 }
 
 #rushmore_img {
+  content: url(Mount_Rushmore.jpg);
   height: 500px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -26,8 +27,6 @@
   margin: auto;
   text-align: center;
   margin-bottom: 20px;
-}
-#rushmore1, #rushmore2, #rushmore3, #rushmore4 {
 }
 
 .question_label {
