--- a/app/views/assignments/_a1.html.erb
+++ b/app/views/assignments/_a1.html.erb
@@ -4,7 +4,7 @@
   <div class="content">
     <h1 id = "rushmore_title">Welcome to Mount Rushmore</h1>
 
-    <img id="rushmore_img" src="/assets/Mount_Rushmore.jpg">
+    <img id="rushmore_img">
 
     
     <%= form_with model: assignment do |a_form|%>
