Added color coding for right and wrong answers

--- a/app/assets/stylesheets/top_level.css
+++ b/app/assets/stylesheets/top_level.css
@@ -50,3 +50,13 @@ h1 {
   display: flex;
   justify-content: center;
 }
+
+.correct_question {
+  border-color: green;
+  border-width:  3px;
+}
+
+.incorrect_question {
+  border-color: red;
+  border-width:  3px;
+}
