Added score feature for rushmore

--- a/app/assets/stylesheets/top_level.css
+++ b/app/assets/stylesheets/top_level.css
@@ -60,3 +60,11 @@ h1 {
   border-color: red;
   border-width:  3px;
 }
+
+.score {
+  font-size: 50px;
+  font-weight: bold;
+  margin: auto;
+  margin-top: 20px;
+  text-align: center;
+}
