--- a/app/views/assignments/_a1.html.erb
+++ b/app/views/assignments/_a1.html.erb
@@ -48,5 +48,11 @@
         <%= a_form.submit "Submit", class: "rushmore_button" %>
       </div>
     <%end%>
+
+    <div class="score">
+      <%score = 0%>
+      <%score += assignment.submissions.where(user_id: current_user.id, correct: true).sum(:score)%>
+      Score: <%=score%>/9
+    </div>
   </div>
 </div>
