--- a/app/assets/stylesheets/top_level.css
+++ b/app/assets/stylesheets/top_level.css
@@ -68,3 +68,14 @@ h1 {
   margin-top: 20px;
   text-align: center;
 }
+
+.submit_button {
+  width: 100px;
+  height: 30px;
+  background-color: darkgray;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: bold;
+  border-width: 2px;
+  border-color: black;
+}
