--- a/app/views/assignments/_a1.html.erb
+++ b/app/views/assignments/_a1.html.erb
@@ -1,6 +1,6 @@
 
 <div class="rushmore regular">
-  <%= render "sidebar" , assignments: Assignment.all %>
+  <%= render "shared/sidebar" , assignments: Assignment.all %>
   <div class="content">
     <h1 id = "rushmore_title">Welcome to Mount Rushmore</h1>
 
