--- a/app/views/assignments/_a1.html.erb
+++ b/app/views/assignments/_a1.html.erb
@@ -2,10 +2,9 @@
 <div class="rushmore regular">
   <%= render "shared/sidebar" , assignments: Assignment.all %>
   <div class="content">
-    <h1 id = "rushmore_title">Welcome to Mount Rushmore</h1>
+    <h1 id = "rushmore_title" class="assignment_title" >Welcome to Mount Rushmore</h1>
 
     <img id="rushmore_img">
-
     
     <%= form_with model: assignment do |a_form|%>
       <p id="president_questions_label">Please give the last name of the 4 presidents, in order from left to right</p>
