--- a/app/views/scorecards/index.html.erb
+++ b/app/views/scorecards/index.html.erb
@@ -6,6 +6,20 @@
 <div class = "regular">
   <%=render "shared/sidebar",assignments: @assignments %>
   <div class="content">
-    Scorecard
+    <p class="assignment_title">Scorecard</p>
+    <div class="score_table">
+      <%total_score = 0%>
+      <%total_possible_score = 0%>
+      <%@assignments.each do |a|%>
+        <p class="score_table_label"><%=a.title%></p>
+        <% cur_score = a.submissions.where(user_id: current_user.id, correct: true).sum(:score)%>
+        <% cur_possible_score = a.questions.sum(:score)%>
+        <p class="score_table_score"><%=cur_score%>/<%=cur_possible_score%></p>
+        <% total_score += cur_score%>
+        <%total_possible_score += cur_possible_score%>
+      <%end%>
+      <p id=score_total_label class="score_table_label">Total</p>
+      <p id="score_total_score" class="score_table_score"><%=total_score%>/<%=total_possible_score%></p>
+    </div>
   </div>
 </div>
