--- a/app/assets/stylesheets/scorecard.css
+++ b/app/assets/stylesheets/scorecard.css
@@ -11,6 +11,11 @@
   margin: 0px;
 }
 
+.score_table_label a{
+  text-decoration: none;
+  color: black;
+}
+
 .score_table_score {
   grid-column: 2 / 3;
   font-size: 30px;
