--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -7,6 +7,8 @@
 <%= render "a1", assignment: @assignment %>
 <% when "State The State"%>
 <%= render "a2", assignment: @assignment %>
+<% when "Devils Tower"%>
+<%= render "a3", assignment: @assignment %>
 <% else %>
   <div>No valid assignment Found!</div>
 <%end%>
