--- a/app/views/assignments/_a3.html.erb
+++ b/app/views/assignments/_a3.html.erb
@@ -16,7 +16,7 @@
         <%= render "printq", q_code: "DEVIL2", assignment: assignment %>
       </div>
       <div class="general_question">
-        <p class="question_label">What mountain range is devils Tower part of?</p>
+        <p class="question_label">What mountain range is Devils Tower part of?</p>
         <%= render "printq", q_code: "DEVIL3", assignment: assignment %>
       </div>
       <div class="general_question">
