--- a/app/assets/stylesheets/top_level.css
+++ b/app/assets/stylesheets/top_level.css
@@ -63,6 +63,12 @@ h1 {
   justify-content: center;
 }
 
+.map {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
 .correct_question {
   border-color: green;
   border-width:  3px;
