--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -8,6 +8,7 @@
     <%end%>
   </ul>
   <li class="sidebar_list_item"><%= link_to "Diary", diaries_path%></li>
+  <li class="sidebar_list_item"><%= link_to "Map", map_path%></li>
   <li class="sidebar_list_item"><%= link_to "Scorecard", scorecards_path%></li>
   <li class="sidebar_list_item"><%= link_to "Leaderboard", leaderboard_path%></li>
   <% if user_signed_in? %>
