Added wildlife assignment

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -9,6 +9,8 @@
 <%= render "a2", assignment: @assignment %>
 <% when "Devils Tower"%>
 <%= render "a3", assignment: @assignment %>
+<% when "Yellowstone Wildlife"%>
+<%= render "a4", assignment: @assignment %>
 <% else %>
   <div>No valid assignment Found!</div>
 <%end%>
