Added geyser assignment

--- a/app/assets/stylesheets/devils.css
+++ b/app/assets/stylesheets/devils.css
@@ -7,3 +7,13 @@
   margin-right: auto;
   margin-left: auto;
 }
+
+#geyser_img {
+  content: url(OldFaithful.webp);
+  height: 500px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
