--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -11,6 +11,8 @@
 <%= render "a3", assignment: @assignment %>
 <% when "Yellowstone Wildlife"%>
 <%= render "a4", assignment: @assignment %>
+<% when "Some Like It Hot!"%>
+<%= render "a5", assignment: @assignment %>
 <% else %>
   <div>No valid assignment Found!</div>
 <%end%>
