--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -13,6 +13,8 @@
 <%= render "a4", assignment: @assignment %>
 <% when "Some Like It Hot!"%>
 <%= render "a5", assignment: @assignment %>
+<% when "Fort Yellowstone"%>
+<%= render "a6", assignment: @assignment %>
 <% else %>
   <div>No valid assignment Found!</div>
 <%end%>
