--- a/app/assets/stylesheets/devils.css
+++ b/app/assets/stylesheets/devils.css
@@ -18,6 +18,16 @@
   margin-left: auto;
 }
 
+#mammoth_img {
+  content: url(mammoth.jpg);
+  height: 500px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 #fort_img {
   content: url(fortyellowstone.jpg);
   height: 800px;
