--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -15,6 +15,8 @@
 <%= render "a5", assignment: @assignment %>
 <% when "Fort Yellowstone"%>
 <%= render "a6", assignment: @assignment %>
+<% when "Mammoth Hot Springs"%>
+<%= render "a7", assignment: @assignment %>
 <% else %>
   <div>No valid assignment Found!</div>
 <%end%>
