--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -17,6 +17,8 @@
 <%= render "a6", assignment: @assignment %>
 <% when "Mammoth Hot Springs"%>
 <%= render "a7", assignment: @assignment %>
+<% when "Grand Teton Scavenger Hunt"%>
+<%= render "a8", assignment: @assignment %>
 <% else %>
   <div>No valid assignment Found!</div>
 <%end%>
