--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -19,6 +19,8 @@
 <%= render "a7", assignment: @assignment %>
 <% when "Grand Teton Scavenger Hunt"%>
 <%= render "a8", assignment: @assignment %>
+<% when "Dinosaur National Monument"%>
+<%= render "a9", assignment: @assignment %>
 <% else %>
   <div>No valid assignment Found!</div>
 <%end%>
