--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -21,6 +21,8 @@
 <%= render "a8", assignment: @assignment %>
 <% when "Dinosaur National Monument"%>
 <%= render "a9", assignment: @assignment %>
+<% when "We're Off To See the Wizard!"%>
+<%= render "a10", assignment: @assignment %>
 <% else %>
   <div>No valid assignment Found!</div>
 <%end%>
