--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -23,6 +23,8 @@
 <%= render "a9", assignment: @assignment %>
 <% when "We're Off To See the Wizard!"%>
 <%= render "a10", assignment: @assignment %>
+<% when "Art Time!"%>
+<%= render "a11", assignment: @assignment %>
 <% else %>
   <div>No valid assignment Found!</div>
 <%end%>
