--- a/app/assets/stylesheets/scorecard.css
+++ b/app/assets/stylesheets/scorecard.css
@@ -5,6 +5,14 @@
   margin: 20px;
 }
 
+.prize_table {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  align-items: center;
+  margin: 20px;
+  font-size: 30px;
+}
+
 .score_table_label {
   grid-column: 1 / 2;
   font-size: 30px;
