--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -11,6 +11,7 @@
   <li class="sidebar_list_item"><%= link_to "Map", map_path%></li>
   <li class="sidebar_list_item"><%= link_to "Scorecard", scorecards_path%></li>
   <li class="sidebar_list_item"><%= link_to "Leaderboard", leaderboard_path%></li>
+  <li class="sidebar_list_item"><%= link_to "Prizes", prizes_path%></li>
   <% if user_signed_in? %>
     <li class="sidebar_list_item"><%= link_to "Log Out", destroy_user_session_path, data: {turbo_method: :delete}%></li>
   <% else %>
